--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,13 @@
     }
   ],
 
+  "icons": {
+    "16": "res/icon16.png",
+    "32": "res/icon32.png",
+    "48": "res/icon48.png",
+    "128": "res/icon128.png"
+  },
+
   "permissions": ["tabs", "activeTab", "storage"],
 
   "action": {
