display current index in clipboard feed

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.postaonline.cz/odvozy/odvozbaliku/secure/*"],
+      "css": ["content.css"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
