--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,9 @@
 
   "content_scripts": [
     {
-      "matches": ["https://www.postaonline.cz/odvozy/odvozbaliku/secure/*"],
+      "matches": [
+        "https://www.postaonline.cz/odvozy/odvozbaliku/secure/vyberZeme"
+      ],
       "css": ["content.css"],
       "js": ["content.js"],
       "run_at": "document_idle"
@@ -21,10 +23,5 @@
     "128": "res/icon128.png"
   },
 
-  "permissions": ["activeTab", "storage"],
-
-  "action": {
-    "default_title": "Insert Address",
-    "default_popup": "popup/popup.html"
-  }
+  "permissions": []
 }
