--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Extension for faster filling out addresses on Czech Post website.",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --env=jsdom",
     "doc": "jsdoc src/ -d docs/ -r",
     "build": "sh build.sh"
   },
   "author": "Matěj Voslař",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.3",
-    "web-ext": "^7.11.0"
-  }
+    "web-ext": "^7.11.0",
+    "jest-environment-jsdom": "^29.7.0"
+  },
+  "dependencies": {}
 }
