--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,5 +24,12 @@
     "128": "res/icon128.png"
   },
 
-  "permissions": []
+  "permissions": [],
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "matej94v@gmail.com",
+      "strict_min_version": "58.0"
+    }
+  }
 }
