--- a/platform_specific/firefox/manifest.json
+++ b/platform_specific/firefox/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Czech Post Address Filler",
-  "version": "0.2",
+  "version": "0.3",
   "description": "Extension for faster filling out addresses on Czech Post website.",
   "author": "Matěj Voslař",
 
@@ -24,5 +24,12 @@
     "128": "res/icon128.png"
   },
 
-  "permissions": []
+  "permissions": [],
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "matej94v@gmail.com",
+      "strict_min_version": "58.0"
+    }
+  }
 }
